Fixed MathJax flickering

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ button{
 	user-select: none;
 }
 
-.subtitle {
+.subtitleBar {
 	bottom:0;
 	width: calc(100% - 20px);
 	position: absolute;
@@ -52,7 +52,7 @@ button{
 	user-select: none;
 }
 
-.subtitle:empty {
+.subtitleBar:empty {
 	display: none;
 }
 
